<resources>
    <string name="app_name">accountBook</string>
    <string name="balance">balance</string>
    <string name="balanceValue" translatable="false">10000</string>
    <string name="income">income</string>
    <string name="incomeValue" translatable="false">0</string>
    <string name="outgoValue" translatable="false">0</string>
    <string name="outgo">outgo</string>
    <string name="add">add</string>
    <string name="inButton">income</string>
    <string name="outButton">outgo</string>
    <string name="input">input RMB</string>
    <string name="submit">submit</string>
    <string name="remark">remarks</string>
    <string name="value">value: </string>
    <string name="type">type: </string>
    <string name="remarks">remarks: </string>
    <string name="return_btn">return</string>
    <string name="itemTitle" translatable="false">itemtitle</string>
    <string name="itemDetail" translatable="false">itemDetail</string>
    <string name="refresh">refresh</string>
</resources>