<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/hello"
    android:orientation="vertical"
    tools:context=".DetailActivity" >

    <TextView
        android:id="@+id/value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:importantForAutofill="no"
        android:text="@string/value"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="30dp"
        android:importantForAutofill="no"
        android:text="@string/type"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/remarks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="30dp"
        android:importantForAutofill="no"
        android:text="@string/remarks"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>